RESOLVED FIXED115197
[BlackBerry] Selection overlay on non-composited iframes are incorrectly positioned.
https://bugs.webkit.org/show_bug.cgi?id=115197
Summary [BlackBerry] Selection overlay on non-composited iframes are incorrectly posi...
Andrew Lo
Reported 2013-04-25 12:39:08 PDT
Selection overlay on non-composited iframes are incorrectly positioned when painted.
Attachments
Patch (2.22 KB, patch)
2013-04-25 12:44 PDT, Andrew Lo
no flags
Andrew Lo
Comment 1 2013-04-25 12:44:41 PDT
Arvid Nilsson
Comment 2 2013-04-25 12:55:33 PDT
LGTM, same strategy as used in SelectionHandler::regionForTextQuads which has been working well for a long time now =)
Rob Buis
Comment 3 2013-04-25 13:54:02 PDT
Comment on attachment 199740 [details] Patch LGTM.
WebKit Commit Bot
Comment 4 2013-04-25 14:38:32 PDT
Comment on attachment 199740 [details] Patch Clearing flags on attachment: 199740 Committed r149145: <http://trac.webkit.org/changeset/149145>
WebKit Commit Bot
Comment 5 2013-04-25 14:38:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.