[BlackBerry] Selection overlay on non-composited iframes are incorrectly positioned. https://bugs.webkit.org/show_bug.cgi?id=115197

Patch by Andrew Lo <anlo@rim.com> on 2013-04-25
Reviewed by Rob Buis.

When drawing the selection overlay, the rects to
paint when selecting text on non-composited sub-frames
need to be adjusted by the frame position.

* WebKitSupport/SelectionOverlay.cpp:
(BlackBerry::WebKit::SelectionOverlay::paintContents):

Canonical link: https://commits.webkit.org/133642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149145 268f45cc-cd09-0410-ab3c-d52691b4dbfc